<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- tablet version included in layout-w500dp/ dir -->

    <com.braintreepayments.api.dropin.view.CardEditText
        style="@style/bt_form_field"
        android:id="@+id/bt_card_form_card_number"
        android:imeOptions="actionNext"
        android:hint="@string/bt_form_hint_card_number" />

    <com.braintreepayments.api.dropin.view.MonthYearEditText
        style="@style/bt_form_field"
        android:id="@+id/bt_card_form_expiration"
        android:hint="@string/bt_form_hint_expiration" />

    <com.braintreepayments.api.dropin.view.CvvEditText
        style="@style/bt_form_field"
        android:id="@+id/bt_card_form_cvv"
        android:hint="@string/bt_form_hint_cvv" />

    <com.braintreepayments.api.dropin.view.PostalCodeEditText
        style="@style/bt_form_field"
        android:id="@+id/bt_card_form_postal_code"
        android:hint="@string/bt_form_hint_postal_code" />

</merge>
