<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- tablet version included in layout-w500dp/ dir -->
    <Button
        android:id="@+id/bt_card_form_submit_button"
        style="@style/bt_submit_button"
        android:layout_alignParentBottom="true"
        android:background="@color/bt_button_disabled_color" />

</merge>

